--- a/ConventionRegistration/ConventionRegistration.csproj
+++ b/ConventionRegistration/ConventionRegistration.csproj
@@ -44,13 +44,19 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConventionRegistration.cs" />
-    <Compile Include="Events.cs" />
+    <Compile Include="Evnt.cs" />
     <Compile Include="Driver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Registrants.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PriorityQueue_Wiener\PriorityQueue_Wiener.csproj">
+      <Project>{60837349-88DB-4D43-80C2-E596FDBEADCA}</Project>
+      <Name>PriorityQueue_Wiener</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
